@@ -10,11 +10,8 @@ import org.jsoup.select.Elements;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.io.IOException;
-import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 
 @Service
 public class ScrapingService {
@@ -24,8 +21,7 @@ public class ScrapingService {
 
     public void scrapeData(String quote, long fromDate, long toDate) {
         String encodedQuote = quote.substring(0,6) + "%3DX";
-        String url = String.format("https://finance.yahoo.com/quote/%s/history/?period1=%d&period2=%d",
-                encodedQuote, fromDate, toDate);
+        String url = String.format("https://finance.yahoo.com/quote/%s/history/?period1=%d&period2=%d", encodedQuote, fromDate, toDate);
         List<ForexData> dataList = new ArrayList<>();
 
         try {
@@ -40,27 +36,17 @@ public class ScrapingService {
                 for (Element row : rows.subList(1, rows.size())) { // Skip header row
                     Elements cols = row.select("td");
                     if (cols.size() == 7) {
-                        String date = DateUtils.convertDateFormat(cols.get(0).text());
+                        String date = DateUtils.convertDateFormat(cols.getFirst().text());
                         // Check if the record already exist in DB or not
-                        Optional<ForexData> existingData = forexDataRepository.findByDateAndFromCurrencyAndToCurrency(
-                                date, fromCurrency, toCurrency);
+                        List<ForexData> existingData = forexDataRepository.findByDateAndFromCurrencyAndToCurrency(date, fromCurrency, toCurrency);
 
-                        if(existingData.isPresent()){
-                            updateAndSaveForexData(existingData, cols);
+                        if(!existingData.isEmpty()){
+                            // To update the data if multiple records with same date is present
+                            for (ForexData data : existingData) updateAndSaveForexData(data, cols);
                             continue;
                         }else{
-                            ForexData data = new ForexData();
-                            data.setFromCurrency(fromCurrency);
-                            data.setToCurrency(toCurrency);
-//                            data.setDate(cols.get(0).text());
-                            data.setDate(date);
-                            data.setOpen(cols.get(1).text());
-                            data.setHigh(cols.get(2).text());
-                            data.setLow(cols.get(3).text());
-                            data.setClose(cols.get(4).text());
-                            data.setAdjClose(cols.get(5).text());
-                            data.setVolume(cols.get(6).text());
-                            dataList.add(data);
+                            ForexData newData = createNewForexData(fromCurrency, toCurrency, date, cols);
+                            dataList.add(newData);
                         }
                     }
                 }
@@ -68,27 +54,36 @@ public class ScrapingService {
             }
             if(!dataList.isEmpty()) forexDataRepository.saveAll(dataList);
 
-        } catch (IOException e) {
+        } catch (Exception e) {
             e.printStackTrace();
-        } catch (ParseException e) {
-            throw new RuntimeException(e);
         }
         return;
     }
 
-    public void updateAndSaveForexData(Optional<ForexData> existingData, Elements cols) {
-        if(existingData.isPresent()) {
-            ForexData existing = existingData.get();
-            // Update existing record with new values
-            existing.setOpen(cols.get(1).text());
-            existing.setHigh(cols.get(2).text());
-            existing.setLow(cols.get(3).text());
-            existing.setClose(cols.get(4).text());
-            existing.setAdjClose(cols.get(5).text());
-            existing.setVolume(cols.get(6).text());
+    public ForexData createNewForexData(String fromCurrency, String toCurrency, String date, Elements cols){
+        // Create new Forex Record and return
+        ForexData newData = new ForexData();
+        newData.setFromCurrency(fromCurrency);
+        newData.setToCurrency(toCurrency);
+        newData.setDate(date);
+        newData.setOpen(cols.get(1).text());
+        newData.setHigh(cols.get(2).text());
+        newData.setLow(cols.get(3).text());
+        newData.setClose(cols.get(4).text());
+        newData.setAdjClose(cols.get(5).text());
+        newData.setVolume(cols.get(6).text());
+        return newData;
+    }
 
-            forexDataRepository.save(existing);
-        }
+    public void updateAndSaveForexData(ForexData existingData, Elements cols) {
+        // Update existing record with new values
+        existingData.setOpen(cols.get(1).text());
+        existingData.setHigh(cols.get(2).text());
+        existingData.setLow(cols.get(3).text());
+        existingData.setClose(cols.get(4).text());
+        existingData.setAdjClose(cols.get(5).text());
+        existingData.setVolume(cols.get(6).text());
+        forexDataRepository.save(existingData);
     }
 }
 
